assets/sass/partials/_headroom.scss
headroom {

  display: block;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 10;
  width: 100%;
  transition: transform 200ms linear;

  &.headroom--pinned {
    transform: translateY(0px);
  }
  &.headroom--unpinned {

    transform: translateY(-60px);

    @include breakpoint($bp-small-desktop) {
      transform: translateY(-79px);
    }
  }

}

main {
  margin-top: 220px;
  @include breakpoint($bp-small-desktop) {
    margin-top: 240px;
  }
  &.homepage {
    margin-top: 0;
  }
}

